--- a/styles.css
+++ b/styles.css
@@ -42,4 +42,21 @@ a:hover{
     margin-bottom: 25px;
 }
 
+.picMe{
+    display: block;
+    border-radius: 10%;
+    height: 25em;
+    margin: auto;
+}
+
+.toCenter{
+    margin: auto;
+}
+
+.testing{
+    border-color: black;
+    border-radius: 2px;
+    border-style: solid;
+}
+
 
